--- a/src/components/Game/style.module.scss
+++ b/src/components/Game/style.module.scss
@@ -1,8 +1,8 @@
-$gap: 5px;
+$gap: 0px;
 $baseColor: #b88144;
 
 .Game {
-  gap: $gap;
+  gap: $gap; // iphone safari not support
   width: 100%;
   height: 100%;
   display: flex;
@@ -11,6 +11,7 @@ $baseColor: #b88144;
   flex-wrap: wrap;
   .item {
     color: #fff;
+    margin-bottom: 5px;
     display: flex;
     border-radius: 5px;
     position: relative;
